<resources>
    <string name="app_name">Pepper Bot Open House Application</string>
    <string name="title_activity_course">CourseActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="title_career">Career opportunities</string>
    <string name="career1">Mobile and Web App Developer</string>
    <string name="career2">Systems Analyst</string>
    <string name="career3">UI Designer</string>
    <string name="career4">UX Designer</string>
    <string name="vv_career">careervideo1</string>

    <string name="Our_Course">Diploma in Digital Design and Development(DDDD)</string>
    <string name="header">Things taught in the course</string>
    <string name="summary"> - Build immersive experiences with voice commands for smart assistants(Google Home, Amazon Echo)</string>
    <string name="summary2"> - VR apps for head-mounted devices (Escape room)</string>
    <string name="summary3"> - Software Testing and Analytic</string>
    <string name="summary4"> - IT Security and Management</string>
    <string name="school_provide">School Providing Internship</string>
    <string name="IPS">Intership Placement System(IPS)</string>
    <string name="self_sourcing">Self Sourcing</string>
    <string name="IT">Must be IT job with diploma relevance</string>
    <string name="offer">Submit complete details of intership position with offer letter from the company</string>
    <string name="overseas_intership">Overseas Intership</string>
    <string name="eligibility">Eligibility</string>
    <string name="pr">Singapore Citizen or Singapore Permanent Resident</string>
    <string name="gpa">GPA of at least 2.5</string>

    <string name="main_self_sourcing">个人申请</string>
    <string name="main_rp_working_source">RP工作源</string>
    <string name="main_overseas">海外实习</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="here_are_some_example_for_internshi_with_rp">这里有一些实习的例子吗？带RP</string>
    <string name="click_for_more_information">单击以获取更多信息</string>
    <string name="menu2_1">• 必须是一份与文凭相关的IT工作</string>
    <string name="menu2_2">• 必须与IT专业人员一起工作</string>
    <string name="menu2_3">• 必须为2023年9月18日至2024年2月4日的20周</string>
    <string name="menu3">资格:</string>
    <string name="menu3_1">• 新加坡公民或新加坡永久居民</string>
    <string name="menu3_2">• GPA至少为2.5</string>
    <string name="menu3_3">• 国家:</string>
    <string name="menu3_4">• 指定3个选项（表示3个不同的国家/地区）</string>
    <string name="menu3_5">• 日本（高GPA至少3.0或以上，GPA至少3.5为佳，仅限新加坡公民）、中国、越南、泰国和印度尼西亚。</string>

    <string name="ask"> Ask me anything that is related to school!</string>
</resources>