<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/mint_green"
    android:orientation="vertical"
    android:padding="16dp">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center_horizontal"
        android:text="@string/Our_Course"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textSize="48sp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/summary"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="34sp" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/summary2"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="34sp" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/summary3"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="34sp" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/summary4"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="34sp" />

</LinearLayout>
