<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".Menu1Fragment">

    <ImageView
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:src="@drawable/ic_robot"
        android:layout_gravity="end"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/menu2_1"
        android:textColor="#333333"
        android:gravity="center_vertical"
        android:layout_gravity="center_vertical"
        android:layout_marginTop="16dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/menu2_2"
        android:textColor="#333333"
        android:gravity="center_vertical"
        android:layout_gravity="center_vertical"
        android:layout_marginTop="5dp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/menu2_3"
        android:textColor="#333333"
        android:gravity="center_vertical"
        android:layout_gravity="center_vertical"
        android:layout_marginTop="5dp"/>

</LinearLayout>